# software-renderer

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/scenes/: default.json  scene.json
docs/: math.md  pipeline.md  shading.md
src/: main.cpp
src/core/: asset_manager.h  depthbuffer.h  framebuffer.h  renderer.h  shadow_map.h
src/loaders/: obj_loader.h  scene_loader.h  stb_image.cpp
src/math/: mat4.h  math_utils.h  vec2.h  vec3.h  vec4.h
src/pipeline/: clipping.h  projection.h  triangle.h  vertex.h
src/platform/: sdl_window.h
src/rasterizer/: barycentric.h  rasterizer.h
src/scene/: camera.h  entity.h  light.h  material.h  scene.h  transform.h
src/shading/: lambert.h  pbr.h  phong.h  shader.h  texture.h
